# folks2

./: configure.ac
backends/: Makefile.am
backends/dummy/: Makefile.am  dummy-backend-factory.vala
backends/dummy/lib/: Makefile.am  dummy-backend.vala  dummy-fat-persona.vala  dummy-persona-store.vala  dummy-persona.vala  folks-dummy.deps
folks/: individual-aggregator.vala
tests/: Makefile.am
tests/dummy/: Makefile.am  add-persona.vala  individual-retrieval.vala
tests/eds/: Makefile.am
tests/folks/: Makefile.am  aggregation.vala
tests/key-file/: individual-retrieval.vala
tests/lib/: Makefile.am  test-case.vala  test-utils.vala
tests/lib/dummy/: Makefile.am  test-case.vala
